hphp/hack/test/typecheck/inout/bad_inout_hint_typeconst4.php
<?hh // strict

abstract class C1 {
  abstract const type T as (function(inout num): void);
}

class C2 extends C1 {
  const type T = (function(inout int): void);
}
